# acme_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
acme_project/: LICENCE
acme_project/acme_project/: settings.py  urls.py
acme_project/birthday/: forms.py  models.py  urls.py  validators.py  views.py
acme_project/birthday/migrations/: 0001_initial.py  0002_auto_20230625_1559.py  0003_birthday_author.py  0004_congratulation.py  0005_auto_20230711_1701.py
acme_project/core/: views.py
acme_project/pages/: views.py
acme_project/templates/: base.html
acme_project/templates/birthday/: birthday.html  birthday_confirm_delete.html  birthday_detail.html  birthday_form.html  birthday_list.html
acme_project/templates/core/: 403csrf.html  404.html
acme_project/templates/includes/: header.html  paginator.html
acme_project/templates/pages/: index.html
acme_project/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  registration_form.html
